Implemented and quick tested annotations for inject presenter and fragment view + added documentation
closes #7