@@ -22,26 +22,25 @@ public abstract class AIFragment<P extends AIPresenter> extends Fragment impleme
     protected Context mParentContext;
     protected P mPresenter;
 
-    @Deprecated
-    @Override
-    public void onInitPresenter() {
-
-    }
-
-    private void createFromAnnotation() {
-        if (mPresenter == null && getClass().getAnnotation(Presenter.class) != null) {
-            Class<P> clazz = getClass().getAnnotation(Presenter.class).presenter();
+    /**
+     * {@link Exception} catch:
+     * - {@link InstantiationException}
+     * - {@link IllegalAccessException}
+     * - {@link InvocationTargetException}
+     * - {@link NoSuchMethodException}
+     */
+    @SuppressWarnings("unchecked")
+    public final void onInitPresenter() {
+        if (getClass().getAnnotation(Presenter.class) != null) {
             try {
-                mPresenter = clazz.getConstructor(clazz).newInstance();
-            } catch (java.lang.InstantiationException e) {
-                throw new IllegalStateException("No default constructor found");
-            } catch (IllegalAccessException e) {
-                throw new IllegalStateException("No default constructor found");
-            } catch (InvocationTargetException e) {
-                throw new IllegalStateException("No default constructor found");
-            } catch (NoSuchMethodException e) {
-                throw new IllegalStateException("No default constructor found");
+                mPresenter = ((Class<P>) getClass()
+                        .getAnnotation(Presenter.class).presenter())
+                        .getConstructor().newInstance();
+            } catch (Exception e) {
+                throw new IllegalStateException("No default constructor found in presenter");
             }
+        } else {
+            throw new IllegalStateException("Not annotated Fragment. Try using @Presenter annotation");
         }
     }
 
@@ -68,7 +67,6 @@ public abstract class AIFragment<P extends AIPresenter> extends Fragment impleme
     public void onCreate(@Nullable Bundle savedInstanceState) {
         super.onCreate(savedInstanceState);
         onInitPresenter();
-        createFromAnnotation();
         attachView();
     }
 
